--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Examen2P</string>
     <string name="title_activity_mapa">Mapa</string>
+    <string name="title_activity_ubicacion">ActivityUbicacion</string>
+    <string name="title_activity_mapas">ActivityMapas</string>
 </resources>
